[gd_scene load_steps=17 format=2]

[ext_resource path="res://Modules/menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Modules/menus/OptionsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Modules/menus/BtnSocial.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameDefinitions/Levels/TestingLevel.tscn" type="PackedScene" id=4]
[ext_resource path="res://Modules/menus/CreditsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Modules/menus/theming/basic_theme.tres" type="Theme" id=6]
[ext_resource path="res://Modules/menus/ui_sounds/UiSoundPack.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resources/Materials/PostProcess/blue_noise_dither.tres" type="Material" id=8]
[ext_resource path="res://GameDefinitions/Levels/LevelMeshParts/scene_files/SurfaceMesh.tscn" type="PackedScene" id=9]
[ext_resource path="res://Modules/environment/SettingsCompliantWorldEnvironment.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/subtitles/default_theming/DuruSans-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Resources/UI/icons/twitter_icon.png" type="Texture" id=12]
[ext_resource path="res://Resources/UI/icons/youtube_icon.png" type="Texture" id=13]
[ext_resource path="res://Resources/UI/icons/itch_icon.png" type="Texture" id=14]
[ext_resource path="res://Modules/post_processing/PostProcessViewportContainer.gd" type="Script" id=15]

[sub_resource type="DynamicFont" id=1]
size = 44
font_data = ExtResource( 11 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )
game_scene_path = ExtResource( 4 )
options_menu = ExtResource( 2 )
credits_menu = ExtResource( 5 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
material = ExtResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
stretch = true
stretch_shrink = 3
script = ExtResource( 15 )
dither_material = ExtResource( 8 )

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 341, 200 )
handle_input_locally = false
render_target_update_mode = 3

[node name="SurfaceMesh" parent="ViewportContainer/Viewport" instance=ExtResource( 9 )]

[node name="Camera" type="Camera" parent="ViewportContainer/Viewport"]
transform = Transform( -0.733789, 0, 0.679377, 0, 1, 0, -0.679377, 0, -0.733789, -17.661, 5.5867, 54.4987 )
current = true

[node name="DirectionalLight" type="DirectionalLight" parent="ViewportContainer/Viewport"]
transform = Transform( 0.921816, -0.239718, -0.304616, 0, -0.785846, 0.618422, -0.387628, -0.570071, -0.724405, 0, 24.9981, 0 )
light_color = Color( 0.333333, 0.376471, 0.619608, 1 )
light_energy = 0.5

[node name="SettingsCompliantWorldEnvironment" parent="ViewportContainer/Viewport" instance=ExtResource( 10 )]

[node name="GameButtons" type="PanelContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 43.0
margin_top = -230.0
margin_right = 130.0
margin_bottom = -63.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameButtons"]
margin_left = 1.0
margin_top = 1.0
margin_right = 188.0
margin_bottom = 166.0
custom_constants/separation = 10

[node name="BtnContinue" type="Button" parent="GameButtons/VBoxContainer"]
margin_right = 187.0
margin_bottom = 21.0
size_flags_vertical = 3
text = "main_menu.continue"

[node name="UiSoundPack" parent="GameButtons/VBoxContainer/BtnContinue" instance=ExtResource( 7 )]

[node name="Control" type="Control" parent="GameButtons/VBoxContainer"]
margin_top = 31.0
margin_right = 187.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 10 )

[node name="BtnNewGame" type="Button" parent="GameButtons/VBoxContainer"]
margin_top = 51.0
margin_right = 187.0
margin_bottom = 72.0
size_flags_vertical = 3
text = "main_menu.new_game"

[node name="UiSoundPack2" parent="GameButtons/VBoxContainer/BtnNewGame" instance=ExtResource( 7 )]

[node name="BtnOptions" type="Button" parent="GameButtons/VBoxContainer"]
margin_top = 82.0
margin_right = 187.0
margin_bottom = 103.0
size_flags_vertical = 3
text = "main_menu.options"

[node name="UiSoundPack3" parent="GameButtons/VBoxContainer/BtnOptions" instance=ExtResource( 7 )]

[node name="BtnCredits" type="Button" parent="GameButtons/VBoxContainer"]
margin_top = 113.0
margin_right = 187.0
margin_bottom = 134.0
size_flags_vertical = 3
text = "main_menu.credits"

[node name="UiSoundPack4" parent="GameButtons/VBoxContainer/BtnCredits" instance=ExtResource( 7 )]

[node name="BtnQuit" type="Button" parent="GameButtons/VBoxContainer"]
margin_top = 144.0
margin_right = 187.0
margin_bottom = 165.0
size_flags_vertical = 3
text = "main_menu.quit"

[node name="UiSoundPack5" parent="GameButtons/VBoxContainer/BtnQuit" instance=ExtResource( 7 )]

[node name="Socials" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -324.0
margin_top = -165.0
margin_right = -26.0
margin_bottom = -37.0

[node name="VBoxContainer" type="VBoxContainer" parent="Socials"]
margin_left = 1.0
margin_top = 1.0
margin_right = 297.0
margin_bottom = 127.0

[node name="HBoxContainer" type="HBoxContainer" parent="Socials/VBoxContainer"]
margin_right = 296.0
margin_bottom = 64.0
alignment = 1

[node name="Twitter" parent="Socials/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 48.0
margin_right = 112.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
icon = ExtResource( 12 )
URI = "https://twitter.com/OfSquiggles"

[node name="UiSoundPack6" parent="Socials/VBoxContainer/HBoxContainer/Twitter" instance=ExtResource( 7 )]

[node name="Youtube" parent="Socials/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 116.0
margin_right = 180.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
icon = ExtResource( 13 )
URI = "https://www.youtube.com/channel/UCIh0Th1EBpFlvcKYWld0OsQ"

[node name="UiSoundPack7" parent="Socials/VBoxContainer/HBoxContainer/Youtube" instance=ExtResource( 7 )]

[node name="ItchIO" parent="Socials/VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 184.0
margin_right = 248.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
icon = ExtResource( 14 )
URI = "https://queenofsquiggles.itch.io/"

[node name="UiSoundPack8" parent="Socials/VBoxContainer/HBoxContainer/ItchIO" instance=ExtResource( 7 )]

[node name="Label" type="Label" parent="Socials/VBoxContainer"]
margin_top = 74.0
margin_right = 296.0
margin_bottom = 95.0
text = "main_menu.social_author"

[node name="Label_2" type="Label" parent="Socials/VBoxContainer"]
margin_top = 105.0
margin_right = 296.0
margin_bottom = 126.0
text = "v.1.0-ALPHA"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 36.0
margin_top = 42.0
margin_right = 681.0
margin_bottom = 213.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave] 
The Ascension of the Lamb
[/wave]"
meta_underlined = false
text = " 
The Ascension of the Lamb
"
fit_content_height = true
scroll_active = false

[connection signal="pressed" from="GameButtons/VBoxContainer/BtnContinue" to="." method="_on_BtnContinue_pressed"]
[connection signal="pressed" from="GameButtons/VBoxContainer/BtnNewGame" to="." method="_on_BtnNewGame_pressed"]
[connection signal="pressed" from="GameButtons/VBoxContainer/BtnOptions" to="." method="_on_BtnOptions_pressed"]
[connection signal="pressed" from="GameButtons/VBoxContainer/BtnCredits" to="." method="_on_BtnCredits_pressed"]
[connection signal="pressed" from="GameButtons/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
